feat: Java 后端使用 Spring Data JPA + PostgreSQL 持久化告警
- 新增 JpaAlertEntity 映射 ehs_business.alerts 表
- 新增 AlertRepository 继承 Spring Data JPA
- AlertService 从 ConcurrentHashMap 升级为数据库持久化
- application.yml 启用 ddl-auto: update 自动建表
- 新增 application-docker.yml Docker 环境配置

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>